[package]
name = "example"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
console_error_panic_hook = "0.1"
console_log = "0.2.0"
egui = "0.16"
egui_wgpu_backend = "0.16"
egui_winit_platform = "0.13"
epi = "0.16"
log = "0.4.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.56", features = [
    "console",
    "Document",
    "Element",
    "Performance",
    "Window",
]}
wgpu = "0.12.0"
winit = "0.26"

[features]
webgl = ["wgpu/webgl"]